<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/movies_fragment"
            android:icon="@drawable/ic_local_movies_black_24dp"
            android:title="@string/drawer_movies_title" />
        <item
            android:id="@+id/series_fragment"
            android:icon="@drawable/television"
            android:title="@string/drawer_series_title" />

    </group>

    <item android:title="@string/drawer_separator">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/settings_fragment"
                    android:icon="@android:drawable/ic_menu_preferences"
                    android:title="@string/drawer_settings_title" />
                <item
                    android:id="@+id/about_us_fragment"
                    android:icon="@android:drawable/ic_menu_info_details"
                    android:title="@string/drawer_about_title" />
            </group>
        </menu>
    </item>

</menu>